<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="25dp">

        <ImageView
            android:id="@+id/image_view"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:contentDescription="@string/weather_image_view_content_description"
            android:src="@drawable/clear" />

        <TextView
            android:id="@+id/venue_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:layout_above="@id/country_text_view"
            android:layout_alignTop="@id/image_view"
            android:layout_toLeftOf="@id/temperature_text_view"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@id/image_view"
            android:text="@string/venue_text_view"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/country_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/image_view"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@id/image_view"
            android:text="@string/weather_condition_text_view" />

        <TextView
            android:id="@+id/last_updated_list_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/country_text_view"
            android:layout_toRightOf="@id/image_view"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="20dp"
            android:text="@string/last_updated_list_text_view"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/temperature_text_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignTop="@id/image_view"
            android:layout_alignBottom="@id/image_view"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:text="@string/temperature_text_view"
            android:textColor="#9de1fe"
            android:textSize="35sp" />

    </RelativeLayout>

    <View
        android:id="@+id/list_item_separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

</androidx.cardview.widget.CardView>